kyverno/networking/block-nodeport-services.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    policies.kyverno.io/description: >-
      The policy does not allow creating NodePort services.
  name: block-nodeport-services
spec:
  background: true
  validationFailureAction: enforce
  rules:
    - name: Prevent users from creating NodePort services
      match:
        resources:
          kinds:
            - Service
      validate:
        pattern:
          spec:
            type: "!NodePort"
        message: "Services with the NodePort type are not allowed!"
